<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/authentication_image" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/activity_authentication_facebook_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_authentication_bowl_height_image_view"
            android:src="@drawable/go_4_lunch_bowl_large" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/material_typography_headline2"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_authentication_text_view_subtitle"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_authentication_subtitle"
            android:textStyle="italic" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.facebook.login.widget.LoginButton xmlns:fb="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_authentication_facebook_button"
        android:layout_width="@dimen/activity_authentication_width_button"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/activity_authentication_facebook_button"
        android:paddingStart="@dimen/activity_authentication_padding_left_button"
        android:paddingEnd="0dp"
        android:paddingTop="@dimen/spacer_3"
        android:paddingBottom="@dimen/spacer_3"
        app:layout_constraintBottom_toTopOf="@+id/activity_authentication_google_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        fb:com_facebook_confirm_logout="false"
        fb:com_facebook_login_text="@string/activity_authentication_button_facebook"
        fb:com_facebook_logout_text="@string/activity_authentication_button_facebook" />

    <Button
        android:id="@+id/activity_authentication_google_button"
        android:layout_width="@dimen/spacer_7"
        android:layout_height="@dimen/activity_authentication_height_button"
        android:layout_marginBottom="@dimen/spacer_5"
        android:drawableLeft="@drawable/ic_google"
        android:gravity="center_vertical"
        android:text="@string/activity_authentication_button_google"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:backgroundTint="@color/activity_authentication_google_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>